--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@analogjs/content": "^1.7.0",
-    "@analogjs/router": "^1.7.0",
+    "@analogjs/content": "1.9.1-beta.6",
+    "@analogjs/router": "1.9.1-beta.6",
     "@angular/animations": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
@@ -28,14 +28,14 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.7.0",
-    "@analogjs/vite-plugin-angular": "^1.7.0",
+    "@analogjs/platform": "1.9.1-beta.6",
+    "@analogjs/vite-plugin-angular": "1.9.1-beta.6",
     "@angular-devkit/build-angular": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
-    "@nx/angular": "^19.1.0",
-    "@nx/devkit": "^19.1.0",
-    "@nx/eslint": "^19.1.0",
-    "@nx/vite": "^19.1.0",
+    "@nx/angular": "20.0.6",
+    "@nx/devkit": "20.0.6",
+    "@nx/eslint": "20.0.6",
+    "@nx/vite": "20.0.6",
     "@nx/workspace": "20.0.6",
     "autoprefixer": "^10.4.0",
     "jsdom": "^22.1.0",
